Support for showing images specified in notification hints.

--- a/data/style.css
+++ b/data/style.css
@@ -5,7 +5,7 @@ window {
 
 /* Have to do it like this since you can't set padding on the window. */
 #container > * {
-  padding-left: 1em;
+  margin: 0 1em;
 }
 
 #summary {
