Image is always on the left, icon is in the lower-right.
This corresponds with how they seem to be used in practice: Telegram and
Desktop both send the person's image (or channel/server image) in the
image hint. They don't use the icon parameter at all, but they do use
the desktop-entry hint, which is morally equivalent I guess.

--- a/data/style.css
+++ b/data/style.css
@@ -1,24 +1,31 @@
 window {
   /* A little bit bigger than the default font size. Personal taste. */
-  font-size: 120%;
+  font-size: 120%
 }
 
 /* Have to do it like this since you can't set padding on the window. */
 #container {
-  margin: 1em;
+  margin: 1em 1em 0.5em 1em;
 }
 
-#icon {
-  margin-right: 1em;
-}
 
 #image {
-  margin-left: 2em;
+  margin-right: 1em;
 }
 
 #summary {
   font-size: 1.2em;
   margin-bottom: 0.5em;
   font-weight: bold;
+}
+
+#icon-and-name {
+  margin-top: 1em;
+  font-size: 0.7em;
+  color: #bbbbbb;
+}
+
+#icon {
+  margin-left: 1em;
 }
 
