--- a/data/style.css
+++ b/data/style.css
@@ -19,6 +19,10 @@ window {
   font-weight: bold;
 }
 
+#buttons {
+  margin-top: 0.5em;
+}
+
 #icon-and-name {
   margin-top: 1em;
   font-size: 0.7em;
